--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
   <header>
-    <img src="NFCLogo.jpg" alt="Nest Capital Finance Logo" />
+    <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NCFLogo.jpg" alt="Nest Capital Finance Logo" />
   </header>
   <nav>
     <a href="#services">Services</a>
