--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #232f3e;
     }
     header {
-      background: #1e293b;
+      background: #000;
       color: #fff;
       padding: 2rem 0 1rem 0;
       text-align: center;
