--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NCFLogo.jpg" alt="Nest Capital Finance Logo" />
   </header>
   <nav>
-    <a href="#services">Services</a>
+    <a href="Services.html">Services</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </nav>
