--- a/Services.html
+++ b/Services.html
@@ -67,7 +67,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NCFLogo.jpg" alt="Nest Capital Finance Logo" />
+      <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
     </a>
   </header>
   <main>
