--- a/index.html
+++ b/index.html
@@ -7,112 +7,109 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:600,400&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      margin: 0;
-      background: #f8fafc;
-      color: #232f3e;
-    }
-    header {
-      background: #606060;
-      color: #fff;
-      padding: 2rem 0 1rem 0;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    header img {
-      height: 300px;
-      object-fit: contain;
-    }
-    nav {
-      margin: 1rem 0;
-      text-align: center;
-    }
-    nav a {
-      color: #1e293b;
-      margin: 0 1rem;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    .hero {
-      background: #e7eff6;
-      padding: 3rem 0;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 1.5rem;
-    }
-    .cta-button {
-      background: #2563eb;
-      color: #fff;
-      border: none;
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      border-radius: 4px;
-      font-weight: 600;
-      cursor: pointer;
-    }
-    section {
-      max-width: 900px;
-      margin: 2rem auto;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 1px 8px #e5e7eb;
-      padding: 2rem 1.5rem;
-    }
-    .services {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-    }
-    .service {
-      flex: 1;
-      min-width: 220px;
-      padding: 1rem 0;
-    }
-    .testimonials {
-      margin-top: 2rem;
-    }
-    .testimonial {
-      border-left: 4px solid #2563eb;
-      padding-left: 1rem;
-      margin: 1rem 0;
-      font-style: italic;
-      color: #334155;
-    }
-    .contact-section {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    form input, form textarea {
-      width: 80%;
-      max-width: 350px;
-      margin: 0.5rem 0;
-      padding: 0.8rem;
-      border-radius: 4px;
-      border: 1px solid #e2e8f0;
-    }
-    form button {
-      margin-top: 1rem;
-    }
-    footer {
-      background: #1e293b;
-      color: #fff;
-      text-align: center;
-      padding: 1rem 0;
-      margin-top: 3rem;
-    }
-    @media (max-width: 700px) {
-      .services {
-        flex-direction: column;
-      }
-    }
+  font-family: 'Montserrat', Arial, sans-serif;
+  margin: 0;
+  background: #181820;
+  color: #fff;
+}
+header {
+  position: absolute;
+  width: 100%;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  padding: 2rem 2.5rem 0 2.5rem;
+  z-index: 99;
+}
+header img {
+  height: 60px;
+  filter: brightness(0) invert(1);
+}
+nav {
+  flex: 1;
+  text-align: right;
+}
+nav a {
+  color: #fff;
+  margin: 0 1.5rem;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+  transition: color 0.2s;
+  letter-spacing: .5px;
+  position: relative;
+}
+nav a:hover {
+  color: #b1b1fb;
+}
+.hero {
+  min-height: 90vh;
+  background: linear-gradient( rgba(18,20,36,0.78), rgba(18,20,36,0.90)), url('YOUR-HERO-IMAGE-LINK') center/cover no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  position: relative;
+  padding-left: 10vw;
+  padding-top: 15vh;
+}
+.hero h1 {
+  font-size: 3.2rem;
+  font-weight: 700;
+  color: #fff;
+  margin: 0 0 1.6rem 0;
+  text-shadow: 0 6px 16px #18182080;
+}
+.hero p {
+  font-size: 1.3rem;
+  color: #ededed;
+  margin: 0 0 2.5rem 0;
+  max-width: 520px;
+  text-shadow: 0 2px 5px #191a24af;
+}
+.cta-button {
+  background: #fff;
+  color: #191a2b;
+  border: none;
+  padding: 1rem 2.3rem;
+  font-size: 1.1rem;
+  border-radius: 2rem;
+  font-weight: 700;
+  box-shadow: 0 4px 20px #232f3e19;
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s;
+}
+.cta-button:hover {
+  background: #2563eb;
+  color: #fff;
+}
+section {
+  max-width: 900px;
+  margin: 2rem auto;
+  background: #22232c;
+  border-radius: 14px;
+  box-shadow: 0 1px 8px #0405123a;
+  padding: 2rem 1.5rem;
+  color: #e8e6ff;
+}
+h2 { color: #b6befb; }
+footer {
+  background: #181a20;
+  color: #a7a7be;
+  text-align: center;
+  padding: 2rem 0;
+  margin-top: 3rem;
+  font-size: 1rem;
+  letter-spacing: .7px;
+}
+@media (max-width: 900px) {
+  .hero { padding-left: 4vw; }
+  header { padding: 2rem 1rem 0 1rem; }
+  nav { text-align: center; display: block; margin-top: 1.2rem;}
+  nav a { margin: 0 .7rem;}
+  section { margin: 1.2rem .2rem;}
+}
+
   </style>
 </head>
 <body>
