--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ header img {
 nav {
   flex: 1;
   text-align: right;
+  margin-top: 2.4rem; /* Add this line or increase the value for lower placement */
+}
 }
 nav a {
   color: #fff;
