--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@ header {
 }
 header img {
   height: 60px;
+  margin-left: 3rem; /* Increase for more rightward shift */
+  margin-top: 1rem;  /* Add this for a downward shift */
   filter: brightness(0) invert(1);
 }
+
 nav {
   flex: 1;
   text-align: right;
