--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ nav {
   flex: 1;
   text-align: right;
   margin-top: 10rem; /* Add this line or increase the value for lower placement */
+  margin-right: 5rem;
 }
 }
 nav a {
