--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ nav {
 }
 }
 nav a {
-  color: #fff;
+  color: #fff;               /* Force white by default */
   margin: 0 1.5rem;
   text-decoration: none;
   font-weight: 600;
@@ -43,9 +43,11 @@ nav a {
   letter-spacing: .5px;
   position: relative;
 }
+
 nav a:hover {
-  color: #b1b1fb;
+  color: #b1b1fb;            /* Subtle highlight for hover, change if needed */
 }
+
 .hero {
   min-height: 90vh;
   background: linear-gradient( rgba(18,20,36,0.78), rgba(18,20,36,0.90)), url('YOUR-HERO-IMAGE-LINK') center/cover no-repeat;
