--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ nav a {
   margin: 0 1.5rem;
   text-decoration: none;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 5rem;
   transition: color 0.2s;
   letter-spacing: .5px;
   position: relative;
 }
 
 nav a:hover {
-  color: #b1b1fb;            /* Subtle highlight for hover, change if needed */
+  color: #606060;            /* Subtle highlight for hover, change if needed */
 }
 
 .hero {
