--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #606060;            /* Subtle highlight for hover, change if needed */
+  color: #FFFAFA;            /* Subtle highlight for hover, change if needed */
 }
 
 .hero {
