--- a/index.html
+++ b/index.html
@@ -28,24 +28,21 @@ header img {
   filter: brightness(0) invert(1);
 }
 nav {
-  flex: 1;
   text-align: right;
-  margin-top: 2.8rem;
-}
+  margin-top: 2.4rem;
 }
 nav a {
-  color: #fff;               /* Force white by default */
-  margin: 0 3.5rem;
+  display: inline-block;
+  padding: 0 1.5rem; /* Add horizontal padding */
+  color: #fff;
   text-decoration: none;
   font-weight: 600;
-  font-size: 5rem;
+  font-size: 1rem;
   transition: color 0.2s;
   letter-spacing: .5px;
-  position: relative;
 }
-
 nav a:hover {
-  color: #FFFAFA;            /* Subtle highlight for hover, change if needed */
+  color: #FFFAFA;           /* Subtle highlight for hover, change if needed */
 }
 
 .hero {
