--- a/index.html
+++ b/index.html
@@ -7,123 +7,125 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:600,400&display=swap" rel="stylesheet" />
   <style>
     body {
-  font-family: 'Montserrat', Arial, sans-serif;
-  margin: 0;
-  background: #181820;
-  color: #fff;
-}
-header {
-  position: absolute;
-  width: 100%;
-  background: transparent;
-  display: flex;
-  align-items: flex-start;  /* Aligns top of flex-container */
-  padding: 0;
-  z-index: 99;
-}
-header img {
-  height: 60px;
-  margin-left: 3rem;
-  margin-top: 1.2rem;
-  filter: brightness(0) invert(1);
-}
-nav {
-  text-align: right;
-  margin-top: 2.4rem;
-}
-nav a {
-  display: inline-block;
-  padding: 0 1.5rem; /* Add horizontal padding */
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 1rem;
-  transition: color 0.2s;
-  letter-spacing: .5px;
-}
-nav a:hover {
-  color: #FFFAFA;           /* Subtle highlight for hover, change if needed */
-}
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin: 0;
+      background: #181820;
+      color: #fff;
+    }
+    header {
+      position: absolute;
+      width: 100%;
+      background: transparent;
+      display: flex;
+      align-items: flex-start;  /* Aligns top of flex-container */
+      padding: 0;
+      z-index: 99;
+    }
+    header img {
+      height: 60px;
+      margin-left: 3rem;
+      margin-top: 1.2rem;
+      filter: brightness(0) invert(1);
+    }
+    nav {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      gap: 2.8rem; /* Spacing between nav links */
+      margin-top: 2.6rem;
+      align-items: flex-start;
+      padding-right: 3rem;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      position: relative;
+    }
+    nav a:hover {
+      color: #606060;
+    }
 
-.hero {
-  min-height: 90vh;
-  background: linear-gradient( rgba(18,20,36,0.78), rgba(18,20,36,0.90)), url('YOUR-HERO-IMAGE-LINK') center/cover no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  position: relative;
-  padding-left: 10vw;
-  padding-top: 15vh;
-}
-.hero h1 {
-  font-size: 3.2rem;
-  font-weight: 700;
-  color: #fff;
-  margin: 0 0 1.6rem 0;
-  text-shadow: 0 6px 16px #18182080;
-}
-.hero p {
-  font-size: 1.3rem;
-  color: #ededed;
-  margin: 0 0 2.5rem 0;
-  max-width: 520px;
-  text-shadow: 0 2px 5px #191a24af;
-}
-.cta-button {
-  background: #fff;
-  color: #191a2b;
-  border: none;
-  padding: 1rem 2.3rem;
-  font-size: 1.1rem;
-  border-radius: 2rem;
-  font-weight: 700;
-  box-shadow: 0 4px 20px #232f3e19;
-  cursor: pointer;
-  transition: background 0.2s, color 0.2s;
-}
-.cta-button:hover {
-  background: #2563eb;
-  color: #fff;
-}
-section {
-  max-width: 900px;
-  margin: 2rem auto;
-  background: #22232c;
-  border-radius: 14px;
-  box-shadow: 0 1px 8px #0405123a;
-  padding: 2rem 1.5rem;
-  color: #e8e6ff;
-}
-h2 { color: #b6befb; }
-footer {
-  background: #181a20;
-  color: #a7a7be;
-  text-align: center;
-  padding: 2rem 0;
-  margin-top: 3rem;
-  font-size: 1rem;
-  letter-spacing: .7px;
-}
-@media (max-width: 900px) {
-  .hero { padding-left: 4vw; }
-  header { padding: 2rem 1rem 0 1rem; }
-  nav { text-align: center; display: block; margin-top: 1.2rem;}
-  nav a { margin: 0 .7rem;}
-  section { margin: 1.2rem .2rem;}
-}
-
+    .hero {
+      min-height: 90vh;
+      background: linear-gradient( rgba(18,20,36,0.78), rgba(18,20,36,0.90)), url('YOUR-HERO-IMAGE-LINK') center/cover no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      position: relative;
+      padding-left: 10vw;
+      padding-top: 15vh;
+    }
+    .hero h1 {
+      font-size: 3.2rem;
+      font-weight: 700;
+      color: #fff;
+      margin: 0 0 1.6rem 0;
+      text-shadow: 0 6px 16px #18182080;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      color: #ededed;
+      margin: 0 0 2.5rem 0;
+      max-width: 520px;
+      text-shadow: 0 2px 5px #191a24af;
+    }
+    .cta-button {
+      background: #fff;
+      color: #191a2b;
+      border: none;
+      padding: 1rem 2.3rem;
+      font-size: 1.1rem;
+      border-radius: 2rem;
+      font-weight: 700;
+      box-shadow: 0 4px 20px #232f3e19;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    .cta-button:hover {
+      background: #2563eb;
+      color: #fff;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #22232c;
+      border-radius: 14px;
+      box-shadow: 0 1px 8px #0405123a;
+      padding: 2rem 1.5rem;
+      color: #e8e6ff;
+    }
+    h2 { color: #b6befb; }
+    footer {
+      background: #181a20;
+      color: #a7a7be;
+      text-align: center;
+      padding: 2rem 0;
+      margin-top: 3rem;
+      font-size: 1rem;
+      letter-spacing: .7px;
+    }
+    @media (max-width: 900px) {
+      .hero { padding-left: 4vw; }
+      header { padding: 2rem 1rem 0 1rem; }
+      nav { justify-content: center; gap: 1.5rem; margin-top: 1.2rem; padding-right: 0; }
+      section { margin: 1.2rem .2rem; }
+    }
   </style>
 </head>
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
+    <nav>
+      <a href="Services.html">Services</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
-  <nav>
-    <a href="Services.html">Services</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
   <div class="hero">
     <h1>Mortgage & Property Expertise, Made Simple</h1>
     <p>Your trusted partner for home loans, property finance, and advisory across Australia.</p>
@@ -172,4 +174,5 @@ footer {
   </footer>
 </body>
 </html>
+
 
