--- a/index.html
+++ b/index.html
@@ -126,11 +126,19 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
-  <div class="hero">
+<div class="hero">
+  <div class="hero-slideshow">
+    <div class="slide active" style="background-image: url('image1.jpg');"></div>
+    <div class="slide" style="background-image: url('image2.jpg');"></div>
+    <div class="slide" style="background-image: url('image3.jpg');"></div>
+    <!-- add more slides as needed -->
+  </div>
+  <div class="hero-content">
     <h1>Mortgage & Property Expertise, Made Simple</h1>
     <p>Your trusted partner for home loans, property finance, and advisory across Australia.</p>
     <a href="#contact"><button class="cta-button">Get Started</button></a>
   </div>
+</div>
   <section id="services">
     <h2>Our Services</h2>
     <div class="services">
