--- a/index.html
+++ b/index.html
@@ -61,25 +61,39 @@
   align-items: flex-start;
   color: #fff;
 }
-    .hero-slideshow {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 0;
-      overflow: hidden;
-    }
-    .hero-slideshow .slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      opacity: 0;
-      transition: opacity 1.5s ease-in-out;
-    }
-    .hero-slideshow .slide.active {
-      opacity: 1;
-      z-index: 1;
-    }
+   .hero-slideshow {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  z-index: 0;
+  overflow: hidden;
+  filter: blur(7px); /* Add blurring */
+  transform: scale(1.05); /* Scale a bit to hide blurred edges */
+}
+
+.hero-slideshow .slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.hero-slideshow .slide.active {
+  opacity: 1;
+  z-index: 1;
+}
+
+.hero-slideshow::after {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: rgba(0, 0, 0, 0.55); /* Dark opaquer overlay */
+  z-index: 2;
+  pointer-events: none;
+}
+
     .hero-content {
       position: relative;
       z-index: 2;
