--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <!-- add more slides as needed -->
   </div>
   <div class="hero-content">
-    <h1>Mortgage & Property Expertise, Made Simple</h1>
-    <p>Your trusted partner for home loans, property finance, and advisory across Australia.</p>
+    <h1>Dream. Plan. Buy.</h1>
+    <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
     <a href="#contact"><button class="cta-button">Get Started</button></a>
   </div>
 </div>
