--- a/Services.html
+++ b/Services.html
@@ -7,17 +7,36 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:600,400&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
   <style>
-    body { font-family: 'Montserrat', Arial, sans-serif; background: #f8fafc; color: #232f3e; margin: 0;}
-    header { background: #000; color: #fff; padding: 1.5rem 0; text-align: center;}
-    header img { height: 100px;}
-    h1 { font-size: 2.2rem; }
+    body {
+      font-family: 'Montserrat', Arial, sans-serif;
+      background: #181820;
+      color: #e8e6ff;
+      margin: 0;
+    }
+    header {
+      background: transparent;
+      padding: 2rem 2.5rem;
+      display: flex;
+      align-items: center;
+    }
+    header a img {
+      height: 60px;
+      filter: brightness(0) invert(1);
+    }
+    h1 {
+      font-size: 2.6rem;
+      margin-bottom: 2rem;
+      color: #b6befb;
+      text-align: center;
+      font-weight: 700;
+    }
     .services-section {
       max-width: 1000px;
       margin: 2rem auto;
       padding: 2rem 1.5rem;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 1px 12px #e0e4e9;
+      background: #22232c;
+      border-radius: 14px;
+      box-shadow: 0 1px 12px #0405123a;
     }
     .services-animated {
       display: flex;
@@ -27,10 +46,10 @@
     }
     .service-card {
       width: 280px;
-      background: #e7eff6;
+      background: #2a2b36;
       border-radius: 10px;
       padding: 2rem 1.5rem;
-      box-shadow: 0 4px 12px #cfd8dc3d;
+      box-shadow: 0 4px 12px #191a2336;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -44,7 +63,7 @@
     .service-card:nth-child(3){ animation-delay: 0.5s;}
     .service-card:hover {
       transform: scale(1.05);
-      box-shadow: 0 10px 25px #b6c9df80;
+      box-shadow: 0 10px 25px #4a4f7f80;
     }
     @keyframes fadeUp {
       to { opacity: 1; transform: translateY(0);}
@@ -56,11 +75,26 @@
       transition: color 0.3s;
     }
     .service-card:hover .service-icon { color: #1e293b;}
-    .service-title { font-size: 1.3rem; font-weight: 600; margin-bottom: .7rem;}
-    .service-desc { font-size: 1.02rem; color: #465066;}
+    .service-title {
+      font-size: 1.4rem;
+      font-weight: 600;
+      margin-bottom: .8rem;
+      color: #b6befb;
+      text-align: center;
+    }
+    .service-desc {
+      font-size: 1.05rem;
+      color: #c0c2d4;
+      text-align: center;
+    }
     @media (max-width: 900px) {
-      .services-animated { flex-direction: column; align-items: center;}
-      .service-card { width: 90%;}
+      .services-animated {
+        flex-direction: column;
+        align-items: center;
+      }
+      .service-card {
+        width: 90%;
+      }
     }
   </style>
 </head>
@@ -94,3 +128,4 @@
   </main>
 </body>
 </html>
+
