--- a/Services.html
+++ b/Services.html
@@ -74,7 +74,7 @@
       color: #2563eb;
       transition: color 0.3s;
     }
-    .service-card:hover .service-icon { color: #1e293b;}
+    .service-card:hover .service-icon { color: #ffffff;}
     .service-title {
       font-size: 1.4rem;
       font-weight: 600;
