--- a/index.html
+++ b/index.html
@@ -160,11 +160,20 @@
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
-    <nav>
-      <a href="Services.html">Services</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
+<nav>
+  <div class="dropdown">
+    <a href="Services.html" class="dropbtn">Services</a>
+    <div class="dropdown-content">
+      <a href="Services.html#home-loans">Home Loans</a>
+      <a href="Services.html#property-advisory">Property Advisory</a>
+      <a href="Services.html#asset-finance">Asset Finance</a>
+      <!-- Add more service links as needed -->
+    </div>
+  </div>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
+
   </header>
 <div class="hero">
   <div class="hero-slideshow">
