--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ nav a:hover, .dropbtn:hover {
     </div>
   </div>
   <a href="#about">About</a>
-  <a href="#contact">Contact</a>
+  <a href="#contactus.html">Contact</a>
 </nav>
 
   </header>
