--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nest Capital Finance - Mortgage & Property Experts</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:600,400&display=swap" rel="stylesheet" />
+  <!-- Import Fira Sans Light font -->
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Montserrat', Arial, sans-serif;
+      font-family: 'Fira Sans', Arial, sans-serif;
+      font-weight: 300;
       margin: 0;
       background: #181820;
       color: #fff;
@@ -17,7 +19,7 @@
       width: 100%;
       background: transparent;
       display: flex;
-      align-items: flex-start;  /* Aligns top of flex-container */
+      align-items: flex-start;
       padding: 0;
       z-index: 99;
     }
@@ -27,73 +29,66 @@
       margin-top: 2.5rem;
       filter: brightness(0) invert(1);
     }
-nav {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  gap: 2.8rem;
-  margin-top: 2.6rem;
-  align-items: flex-start;
-  padding-right: 3rem;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropbtn {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 1rem;
-  transition: color 0.2s;
-  letter-spacing: .5px;
-  background: none;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 0;
-  font-family: inherit;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #232b34;
-  min-width: 200px;
-  box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
-  border-radius: 7px;
-  margin-top: .7rem;
-  z-index: 1001;
-  padding: 0.4rem 0;
-}
-
-.dropdown-content a {
-  color: #fff;
-  padding: 0.9rem 1.5rem;
-  text-decoration: none;
-  display: block;
-  font-size: 1rem;
-  transition: background .17s, color .17s;
-  border-radius: 4px;
-}
-
-.dropdown-content a:hover {
-  background-color: #363d48;
-  color: #b6befb;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-nav a, .dropbtn {
-  color: #fff;
-}
-nav a:hover, .dropbtn:hover {
-  color: #606060;
-}
+    nav {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      gap: 2.8rem;
+      margin-top: 2.6rem;
+      align-items: flex-start;
+      padding-right: 3rem;
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    .dropbtn {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0;
+      font-family: inherit;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #232b34;
+      min-width: 200px;
+      box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
+      border-radius: 7px;
+      margin-top: .7rem;
+      z-index: 1001;
+      padding: 0.4rem 0;
+    }
+    .dropdown-content a {
+      color: #fff;
+      padding: 0.9rem 1.5rem;
+      text-decoration: none;
+      display: block;
+      font-size: 1rem;
+      transition: background .17s, color .17s;
+      border-radius: 4px;
+    }
+    .dropdown-content a:hover {
+      background-color: #363d48;
+      color: #b6befb;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    nav a, .dropbtn {
+      color: #fff;
+    }
+    nav a:hover, .dropbtn:hover {
+      color: #606060;
+    }
     nav a {
       color: #fff;
       text-decoration: none;
@@ -106,58 +101,52 @@ nav a:hover, .dropbtn:hover {
     nav a:hover {
       color: #606060;
     }
-
-.hero {
-  position: relative;
-  min-height: 90vh;
-  overflow: hidden;
-  padding-left: 10vw;
-  padding-top: 15vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  color: #fff;
-}
-   .hero-slideshow {
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  z-index: 0;
-  overflow: hidden;
-  filter: blur(3px); /* Add blurring */
-  transform: scale(1.05); /* Scale a bit to hide blurred edges */
-}
-
-.hero-slideshow .slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  opacity: 0.5;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.hero-slideshow .slide.active {
-  opacity: 0.5;
-  z-index: 1;
-}
-
-.hero-slideshow::after {
-  content: '';
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0, 0, 0, 0.55); /* Dark opaquer overlay */
-  z-index: 2;
-  pointer-events: none;
-}
-
+    .hero {
+      position: relative;
+      min-height: 90vh;
+      overflow: hidden;
+      padding-left: 10vw;
+      padding-top: 15vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      color: #fff;
+    }
+    .hero-slideshow {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      overflow: hidden;
+      filter: blur(3px);
+      transform: scale(1.05);
+    }
+    .hero-slideshow .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      opacity: 0.5;
+      transition: opacity 1.5s ease-in-out;
+    }
+    .hero-slideshow .slide.active {
+      opacity: 0.5;
+      z-index: 1;
+    }
+    .hero-slideshow::after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0, 0, 0, 0.55);
+      z-index: 2;
+      pointer-events: none;
+    }
     .hero-content {
       position: relative;
       z-index: 2;
       max-width: 600px;
     }
-
     .hero h1 {
       font-size: 3.2rem;
       font-weight: 700;
@@ -197,7 +186,9 @@ nav a:hover, .dropbtn:hover {
       padding: 2rem 1.5rem;
       color: #e8e6ff;
     }
-    h2 { color: #b6befb; }
+    h2 {
+      color: #b6befb;
+    }
     footer {
       background: #181a20;
       color: #a7a7be;
@@ -208,46 +199,54 @@ nav a:hover, .dropbtn:hover {
       letter-spacing: .7px;
     }
     @media (max-width: 900px) {
-      .hero { padding-left: 4vw; }
-      header { padding: 2rem 1rem 0 1rem; }
-      nav { justify-content: center; gap: 1.5rem; margin-top: 1.2rem; padding-right: 0; }
-      section { margin: 1.2rem .2rem; }
+      .hero {
+        padding-left: 4vw;
+      }
+      header {
+        padding: 2rem 1rem 0 1rem;
+      }
+      nav {
+        justify-content: center;
+        gap: 1.5rem;
+        margin-top: 1.2rem;
+        padding-right: 0;
+      }
+      section {
+        margin: 1.2rem 0.2rem;
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
-<nav>
-  <div class="dropdown">
-    <a href="Services.html" class="dropbtn">Services</a>
-    <div class="dropdown-content">
-      <a href="Services.html#home-loans">Home Loans</a>
-      <a href="Services.html#property-advisory">Property Advisory</a>
-      <a href="Services.html#asset-finance">Asset Finance</a>
-      <!-- Add more service links as needed -->
+    <nav>
+      <div class="dropdown">
+        <a href="Services.html" class="dropbtn">Services</a>
+        <div class="dropdown-content">
+          <a href="Services.html#home-loans">Home Loans</a>
+          <a href="Services.html#property-advisory">Property Advisory</a>
+          <a href="Services.html#asset-finance">Asset Finance</a>
+        </div>
+      </div>
+      <a href="#about">About</a>
+      <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html">Contact</a>
+    </nav>
+  </header>
+  <div class="hero">
+    <div class="hero-slideshow">
+      <div class="slide active" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
+      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
+      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
+      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
+      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
+    </div>
+    <div class="hero-content">
+      <h1>Dream. Plan. Buy.</h1>
+      <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
+      <a href="#contact"><button class="cta-button">Get Started</button></a>
     </div>
   </div>
-  <a href="#about">About</a>
-  <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html">Contact</a>
-</nav>
-
-  </header>
-<div class="hero">
-  <div class="hero-slideshow">
-    <div class="slide active" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
-    <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
-    <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
-    <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
-    <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
-    <!-- add more slides as needed -->
-  </div>
-  <div class="hero-content">
-    <h1>Dream. Plan. Buy.</h1>
-    <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
-    <a href="#contact"><button class="cta-button">Get Started</button></a>
-  </div>
-</div>
   <section id="services">
     <h2>Our Services</h2>
     <div class="services">
@@ -267,9 +266,7 @@ nav a:hover, .dropbtn:hover {
   </section>
   <section id="about">
     <h2>About Nest Capital Finance</h2>
-    <p>
-      At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.
-    </p>
+    <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.</p>
     <div class="testimonials">
       <strong>Testimonials</strong>
       <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</div>
@@ -290,49 +287,47 @@ nav a:hover, .dropbtn:hover {
     &copy; 2025 Nest Capital Finance | All Rights Reserved
   </footer>
   <script>
-  const slides = document.querySelectorAll('.hero-slideshow .slide');
-  let currentSlide = 0;
-  const slideInterval = setInterval(nextSlide, 5000);
+    const slides = document.querySelectorAll('.hero-slideshow .slide');
+    let currentSlide = 0;
+    const slideInterval = setInterval(nextSlide, 5000);
 
-  function nextSlide() {
-    slides[currentSlide].classList.remove('active');
-    currentSlide = (currentSlide+1) % slides.length;
-    slides[currentSlide].classList.add('active');
-  }
-</script>
-<script>
-document.querySelectorAll('.dropdown').forEach(function(drop) {
-  var timer;
+    function nextSlide() {
+      slides[currentSlide].classList.remove('active');
+      currentSlide = (currentSlide + 1) % slides.length;
+      slides[currentSlide].classList.add('active');
+    }
+  </script>
+  <script>
+    document.querySelectorAll('.dropdown').forEach(function(drop) {
+      var timer;
 
-  drop.addEventListener('mouseenter', function() {
-    clearTimeout(timer);
-    this.querySelector('.dropdown-content').style.display = 'block';
-  });
+      drop.addEventListener('mouseenter', function() {
+        clearTimeout(timer);
+        this.querySelector('.dropdown-content').style.display = 'block';
+      });
 
-  drop.addEventListener('mouseleave', function() {
-    var dropdownContent = this.querySelector('.dropdown-content');
-    timer = setTimeout(function() {
-      dropdownContent.style.display = 'none';
-    }, 1000); // Adjust delay in ms (e.g., 400ms)
-  });
+      drop.addEventListener('mouseleave', function() {
+        var dropdownContent = this.querySelector('.dropdown-content');
+        timer = setTimeout(function() {
+          dropdownContent.style.display = 'none';
+        }, 1000);
+      });
 
-  // Optionally, ensure links inside dropdown also keep it open while hovering
-  var content = drop.querySelector('.dropdown-content');
-  if (content) {
-    content.addEventListener('mouseenter', function() {
-      clearTimeout(timer);
-      this.style.display = 'block';
+      var content = drop.querySelector('.dropdown-content');
+      if (content) {
+        content.addEventListener('mouseenter', function() {
+          clearTimeout(timer);
+          this.style.display = 'block';
+        });
+        content.addEventListener('mouseleave', function() {
+          var self = this;
+          timer = setTimeout(function() {
+            self.style.display = 'none';
+          }, 1000);
+        });
+      }
     });
-    content.addEventListener('mouseleave', function() {
-      var self = this;
-      timer = setTimeout(function() {
-        self.style.display = 'none';
-      }, 1000);
-    });
-  }
-});
-</script>
-
+  </script>
 </body>
 </html>
 
