--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  opacity: 0;
+  transform: translateY(60px);
+  animation: fadeUp 1.1s 0.13s forwards;
+}
+@keyframes fadeUp {
+  to { opacity: 1; transform: translateY(0);}
 }
 form {
   width: 100%;
@@ -47,7 +53,7 @@ form {
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 1.1rem 1.4rem;
-  align-items: center;
+  align-items: center;       /* This vertically centers text with input */
   margin-bottom: 1.3rem;
 }
 label {
@@ -55,6 +61,21 @@ label {
   letter-spacing: .07em;
   color: #b6befb;
   justify-self: end;
+  align-self: center;        /* Vertically center label within grid cell */
+  white-space: nowrap;       /* Prevents breaking words into two lines */
+  text-align: right;         /* Align label text to right for neatness */
+}
+@media (max-width: 700px) {
+  .form-grid { 
+    grid-template-columns: 1fr;
+    gap: 0.4rem 0;
+  }
+  label { 
+    justify-self: start; 
+    text-align: left; 
+    margin-top: 0.7rem; 
+    white-space: normal;     /* Allow wrapping on small screens */
+  }
 }
 input, textarea {
   width: 100%;
