--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
       font-weight: 700;
     }
 .contact-section {
-  max-width: 430px;
+  max-width: 540px;                /* Increased from 430px */
   margin: 4rem auto;
   background: #22232c;
   border-radius: 16px;
   box-shadow: 0 1px 16px #0405121a;
-  padding: 2.5rem 2.5rem 2rem 2.5rem;
+  padding: 2.5rem 3.2rem 2rem 3.2rem;  /* Wider padding for balanced look */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,7 +59,7 @@ form {
 label {
   font-weight: 600;
   letter-spacing: .07em;
-  color: #b6befb;
+  color: #fff;
   justify-self: end;
   align-self: center;        /* Vertically center label within grid cell */
   white-space: nowrap;       /* Prevents breaking words into two lines */
