--- a/contact.html
+++ b/contact.html
@@ -175,6 +175,7 @@
     input:focus, textarea:focus {
       border: 1.5px solid #2563eb;
     }
+    
     .cta-button {
       width: 100%;
       background: #2563eb;
@@ -215,6 +216,60 @@
       .form-grid { grid-template-columns: 1fr; gap: 0.48rem 0; }
       label { justify-self: start; text-align: left; margin-top: 0.7rem; }
     }
+    /* Placeholder style for all modern browsers */
+input::placeholder,
+textarea::placeholder {
+  color: #8c92ac;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 300;
+  opacity: 1;
+  letter-spacing: 0;
+}
+
+/* Chrome, Safari, Opera */
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #8c92ac;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 300;
+  opacity: 1;
+  letter-spacing: 0;
+}
+
+/* Firefox 19+ */
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #8c92ac;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 300;
+  opacity: 1;
+  letter-spacing: 0;
+}
+
+/* IE 10+ */
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #8c92ac;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 300;
+  opacity: 1;
+  letter-spacing: 0;
+}
+
+/* Firefox 18- */
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #8c92ac;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 300;
+  opacity: 1;
+  letter-spacing: 0;
+}
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
