--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div class="hero-content">
       <h1>Dream. Plan. Buy.</h1>
       <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
-      <button class="cta-button">Get Started</button>
+      <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html" class="cta-button">Get Started</a>
     </div>
   </div>
   <section id="services">
