--- a/Services.html
+++ b/Services.html
@@ -13,16 +13,22 @@
       color: #e8e6ff;
       margin: 0;
     }
-    header {
-      background: transparent;
-      padding: 2rem 2.5rem;
-      display: flex;
-      align-items: center;
-    }
-    header a img {
-      height: 60px;
-      filter: brightness(0) invert(1);
-    }
+   header {
+  position: absolute;
+  width: 100%;
+  background: transparent;
+  display: flex;
+  align-items: flex-start;
+  padding: 0;
+  z-index: 99;
+}
+header a img {
+  height: 100px;
+  margin-left: 4rem;
+  margin-top: 2.5rem;
+  filter: brightness(0) invert(1);
+}
+
     h1 {
       font-size: 2.6rem;
       margin-bottom: 2rem;
