--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,9 @@ header a img {
   margin-top: 2.5rem;
   filter: brightness(0) invert(1);
 }
-
+    main {
+  padding-top: 130px;
+}
     .contact-layout {
       display: flex;
       justify-content: center;
