--- a/Services.html
+++ b/Services.html
@@ -13,25 +13,24 @@
       color: #e8e6ff;
       margin: 0;
     }
-   header {
-  position: absolute;
-  width: 100%;
-  background: transparent;
-  display: flex;
-  align-items: flex-start;
-  padding: 0;
-  z-index: 99;
-}
+    header {
+      position: absolute;
+      width: 100%;
+      background: transparent;
+      display: flex;
+      align-items: flex-start;
+      padding: 0;
+      z-index: 99;
+    }
+    header a img {
+      height: 100px;
+      margin-left: 4rem;
+      margin-top: 2.5rem;
+      filter: brightness(0) invert(1);
+    }
     main {
-  padding-top: 130px;
-}
-header a img {
-  height: 100px;
-  margin-left: 4rem;
-  margin-top: 2.5rem;
-  filter: brightness(0) invert(1);
-}
-
+      padding-top: 130px; /* creates space for logo/header */
+    }
     h1 {
       font-size: 2.6rem;
       margin-bottom: 2rem;
@@ -137,3 +136,4 @@ header a img {
   </main>
 </body>
 </html>
+
